app/assets/stylesheets/external/vcwiz.scss
/* ... */
.global-error {
  padding: 50px;
  text-align: center;

  h1 {
    margin-bottom: 0.5em;
  }

  p {
    margin-bottom: 0;
  }
}

textarea[type='text'] {
  height: 5em;
}

button:focus {
  outline: none;
}

a.indistinguishable, .overlay-modal a.indistinguishable, .modal-page a.indistinguishable {
  color: inherit;
  font-weight: inherit;
}

div.flashes-alert {
  @include only-desktop {
    position: relative;
    right: 2.5em;
    top: 0.5em;
    z-index: 1;
  }

  &-tether-target {
    display: inline-block;
  }

  .arrow {
    @include on-mobile {
      visibility: hidden;
    }

    width: 0;
    height: 0;
    border-left: 15px solid transparent;
    border-right: 15px solid transparent;
    border-bottom: 15px solid $alert-dropdown;
  }

  div.wrapper {
    position: relative;
    opacity: 0.97;
    left: -5%;
    max-width: 27em;
    border: 1px solid $alert-dropdown;
    background: $alert-dropdown;
    padding: 0.5em;
  }

  div.callout {
    background-color: $top-bar !important;
    margin: 0;
    padding: 0.5em;
    user-select: none;
    cursor: pointer;

    &:not(:first-child) {
      margin-top: 1em;
    }

    h5 {
      margin-bottom: 0;
    }

    .close-button:focus {
      outline: none;
    }

    &.success {
      color: lighten($green, 25%);
      box-shadow: 0 0 2px 1px lighten($green, 25%);
    }

    &.alert {
      color: $red;
      box-shadow: 0 0 2px 1px lighten($red, 25%);
    }

    &.warning {
      color: $yellow;
      box-shadow: 0 0 2px 1px lighten($yellow, 25%);
    }
  }
}

.full-width {
  width: 100%;
}

.full-max-width {
  max-width: unset;
}

.full-height {
  height: 100%;
}

.wide-row {
  max-width: 95%;
}

.vr {
  width: 0;
  border: 1px solid rgba($light-grey, 0.75);
  height: auto;
  margin: 0.5em 1.5em;

  @include on-mobile {
    display: none;
  }

  &-hidden {
    visibility: hidden;
  }
}

.standard-loader {
  text-align: center;

  .loader {
    margin: auto;
    padding-top: 13%;

    .loading-text {
      color: $success;
      font-weight: bold;
      text-transform: uppercase;
    }
  }
}

.scroll-shadow {
  background:
          linear-gradient(white 30%, hsla(0,0%,100%, 0)),
          linear-gradient(hsla(0,0%,100%,0) 10px, white 70%) bottom,
          radial-gradient(at top, rgba(0,0,0,0.2), transparent 70%),
          radial-gradient(at bottom, rgba(0,0,0,0.2), transparent 70%) bottom;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
}

.horizontal-scroll-shadow {
  background:
          linear-gradient(to right, $lightest-grey 1%, hsla(0, 0%, 100%, 0)),
          linear-gradient(to right, hsla(0, 0%, 100%, 0), $lightest-grey 99%) 0 100%,
          linear-gradient(to right, $grey, hsla(0, 0%, 100%, 0) 1%),
          linear-gradient(to left, $grey, hsla(0, 0%, 100%, 0) 1%);
  background-attachment: local, local, scroll, scroll;
}

.glow-highlight {
  animation: pulse 2s infinite;
}

@keyframes pulse {
  0% {
    box-shadow: 0 0 0 0 rgba($success-dark, 0.7);
  }
  70% {
    box-shadow: 0 0 0 10px rgba($success-dark, 0);
  }
  100% {
    box-shadow: 0 0 0 0 rgba($success-dark, 0);
  }
}

html, body, .full-screen, #vcwiz, h1, h2, h3, h4, h5, h6, input {
  font-family: 'Circular Std', CircularStd-Book, "Helvetica Neue", sans-serif;
}

body.ReactModal__Body--open {
  overflow: hidden;
}

p.tight {
  margin-bottom: 5px;
}

.button.google {
  background: url(image_path("login/btn_google_signin_dark_normal_web.png")) no-repeat center;
  width: 191px;
  height: 46px;

  &.light {
    background: url(image_path("login/btn_google_signin_light_normal_web.png")) no-repeat center;
  }
}

.button.success {
  background-color: $success;
  color: $white;

  &.disabled {
    background-color: $success-dark;
    color: $white;

    &:focus, &:hover {
      background-color: $success-dark;
      color: $white;
    }
  }

  &:focus, &:hover {
    background-color: $success-dark;
    color: $white;
  }
}

.button.secondary {
  background-color: $secondary;
  color: $white;

  &.disabled {
    background-color: $secondary-dark;
    color: $white;

    &:focus, &:hover {
      background-color: $secondary-dark;
      color: $white;
    }
  }

  &:focus, &:hover {
    background-color: $secondary-dark;
    color: $white;
  }
}

.sidebar {
  padding-top: 50px;

  .title {
    font-weight: bold;
  }

  h6 {
    text-transform: uppercase;
    font-weight: bold;
    color: $mid-grey;
    letter-spacing: 0.1em;
    padding-top: 10px;
  }

  .button-wrapper {
    padding-top: 15px;
  }
}

.rounded-image {
  background-color: $white;
  overflow: hidden;

  .fallback {
    border-radius: 50%;
    border: 1px solid $mid-grey;
    font-size: 11px;
    text-align: center;
  }
}

.inline-image {
  display: inline-block;
}

.intro-path {
  display: flex;
  align-items: center;

  &.with-photos {
    position: relative;
    top: 1px;
  }

  &.without-photos {
    margin-top: -2px;
  }

  &.indirect {
    .link {
      font-size: 1.1em;
    }
  }

  & > div:not(:first-child) {
    margin-left: 0.2em;
  }
}

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.65);
}

.modal-content {
  position: absolute;
  top: 8%;
  left: 8%;
  right: 8%;
  bottom: 8%;
  border: 1px solid $light-grey;
  background: $white;
  border-radius: 4px;
  outline: none;

  .close-icon {
    position: absolute;
    right: -17px;
    top: -17px;
    z-index: 2;
    background: white;
    width: 35px;
    height: 35px;
    border-radius: 50%;
    border: 1px solid $grey;
    color: darken($grey, 25%);
    text-align: center;
    line-height: 25px;
    font-size: xx-large;
    cursor: pointer;
  }
}

.modal-content.no-background {
  background: unset;
  border: unset;
}

.modal-overlay, .modal-content {
  z-index: 2;
}
/* ... */

